animal-sniffer-annotations as optional
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1675106 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -475,7 +475,7 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-annotations</artifactId>
         <version>1.13</version>
-        <scope>compile</scope>
+        <optional>true</optional>
       </dependency>
 
       <dependency>
