splitting EE and Servlet reporting webapp
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1679514 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -28,6 +28,10 @@
   <name>Apache Sirona Incubator :: Server</name>
   <packaging>pom</packaging>
 
+  <properties>
+    <tomee.version>1.7.1</tomee.version>
+  </properties>
+
   <modules>
     <module>collector</module>
     <module>reporting</module>
