--- a/server/reporting/reporting-webapp-full/src/main/webapp/WEB-INF/web.xml
+++ b/server/reporting/reporting-webapp-full/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
-
   <context-param> <!-- only register this webapp gauges -->
     <param-name>monitoring.discovery.packages</param-name>
     <param-value>org.apache.sirona.reporting.web.plugin</param-value>
@@ -30,8 +29,23 @@
     <filter-class>org.apache.sirona.reporting.web.SironaController</filter-class>
   </filter>
 
+  <servlet>
+    <servlet-name>CXFServlet</servlet-name>
+    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+    <init-param>
+      <param-name>config-location</param-name>
+      <param-value>classpath:applicationContext.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
   <filter-mapping>
     <filter-name>Monitoring</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <servlet-mapping>
+    <servlet-name>CXFServlet</servlet-name>
+    <url-pattern>/restServices/*</url-pattern>
+  </servlet-mapping>
 </web-app>
