SIRONA-45 migrating to johnzon (replace jackson), SIRONA-46 adding websocket protocol for collection of data (distributed mode), fixing few tests
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1711716 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/store/pom.xml
+++ b/agent/store/pom.xml
@@ -31,5 +31,6 @@
   <modules>
     <module>graphite</module>
     <module>cube</module>
+    <module>websocket-client</module>
   </modules>
 </project>
