--- a/pom.xml
+++ b/pom.xml
@@ -51,10 +51,11 @@
     <java.runtime>16</java.runtime>
     <maven.compiler.target>1.6</maven.compiler.target>
 
-    <tomcat.version>7.0.50</tomcat.version>
+    <tomcat.version>7.0.52</tomcat.version>
     <arquillian.version>1.1.3.Final</arquillian.version> <!-- for tomcat adapter -->
     <openejb.version>4.5.2</openejb.version>
     <slf4j.version>1.7.5</slf4j.version>
+    <johnzon.version>0.9.2-incubating</johnzon.version>
   </properties>
 
   <distributionManagement>
@@ -376,6 +377,19 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.apache.geronimo.specs</groupId>
+        <artifactId>geronimo-json_1.0_spec</artifactId>
+        <version>1.0-alpha-1</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-websocket-api</artifactId>
+        <version>${tomcat.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
       <!-- we rely on JUL but some dependencies can need slf4j, ex: EhCache -->
       <dependency>
         <groupId>org.slf4j</groupId>
