SIRONA-47 adding AlertListener API
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1711893 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/src/test/resources/sirona.properties
+++ b/core/src/test/resources/sirona.properties
@@ -23,3 +23,8 @@ org.apache.sirona.goodbeer=true
 org.apache.sirona.configuration.IoCsTest$Field.field = field-value
 org.apache.sirona.configuration.IoCsTest$Method.method = method-value
 org.apache.sirona.configuration.IoCsTest$MethodNotField.methodNotField = method-value-again
+
+org.apache.sirona.alerters = test1,test2
+test1.class = org.apache.sirona.repositories.DefaultRepositoryTest$Alerter1
+test1.config = a-config-value
+test2.class = org.apache.sirona.repositories.DefaultRepositoryTest$Alerter2
