--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
     <module>agent</module>
     <module>plugins</module>
     <module>server</module>
+    <module>alerter</module>
   </modules>
 
   <developers>
