[maven-release-plugin] prepare release sirona-0.3-incubating
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1712363 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/performance/aop/pom.xml
+++ b/agent/performance/aop/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>sirona-performance</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.3-incubating-SNAPSHOT</version>
+    <version>0.3-incubating</version>
   </parent>
 
   <artifactId>sirona-aop</artifactId>
