--- a/plugins/tomee/pom.xml
+++ b/plugins/tomee/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <artifactId>sirona-plugins</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.3-incubating</version>
+    <version>0.4-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
