--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
   <groupId>org.apache.sirona</groupId>
   <artifactId>sirona</artifactId>
-  <version>0.3-incubating</version>
+  <version>0.4-incubating-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Sirona Incubator</name>
   <url>http://sirona.incubator.apache.org/docs/${project.version}</url>
@@ -136,9 +136,9 @@
   </mailingLists>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/incubator/sirona/tags/sirona-0.3-incubating</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/incubator/sirona/tags/sirona-0.3-incubating</developerConnection>
-    <url>http://svn.apache.org/viewvc/incubator/sirona/tags/sirona-0.3-incubating</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/incubator/sirona/trunk/</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/incubator/sirona/trunk/</developerConnection>
+    <url>http://svn.apache.org/viewvc/incubator/sirona/trunk/</url>
   </scm>
 
   <ciManagement>
