--- a/alerter/mail/pom.xml
+++ b/alerter/mail/pom.xml
@@ -21,10 +21,10 @@
   <parent>
     <artifactId>sirona-alerter</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.4-incubating-SNAPSHOT</version>
+    <version>0.3-incubating-SNAPSHOT</version>
   </parent>
 
-  <artifactId>mail</artifactId>
+  <artifactId>sirona-mail-alerter</artifactId>
   <name>Apache Sirona Incubator :: Alerter :: Mail</name>
 
   <dependencies>
