--- a/agent/store/websocket-client/pom.xml
+++ b/agent/store/websocket-client/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>sirona-agent-store</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.3-incubating</version>
+    <version>0.4-incubating-SNAPSHOT</version>
   </parent>
 
   <artifactId>sirona-websocket-client</artifactId>
