--- a/alerter/mail/pom.xml
+++ b/alerter/mail/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>sirona-alerter</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.3-incubating</version>
+    <version>0.4-incubating-SNAPSHOT</version>
   </parent>
 
   <artifactId>sirona-mail-alerter</artifactId>
