--- a/server/reporting/reporting-webapp-full/pom.xml
+++ b/server/reporting/reporting-webapp-full/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.apache.sirona</groupId>
     <artifactId>sirona-reporting</artifactId>
-    <version>0.3-incubating</version>
+    <version>0.4-incubating-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
