exclude test extension/listener from javaagent test jar
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1713964 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -129,12 +129,15 @@
             <goals>
               <goal>test-jar</goal>
             </goals>
+            <configuration>
+              <excludes> <!-- packaged to be reusable => don't reuse the test config -->
+                <exclude>sirona.properties</exclude>
+                <exclude>META-INF/services/*</exclude>
+              </excludes>
+            </configuration>
           </execution>
         </executions>
         <configuration>
-          <excludes> <!-- packaged to be reusable => don't reuse the test config -->
-            <exclude>**/sirona.properties</exclude>
-          </excludes>
           <archive>
             <manifestEntries>
               <Premain-Class>${agent.class}</Premain-Class>
