--- a/store/memory/pom.xml
+++ b/store/memory/pom.xml
@@ -33,6 +33,10 @@
       <groupId>org.apache.sirona</groupId>
       <artifactId>sirona-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
