--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.sirona</groupId>
     <artifactId>sirona</artifactId>
-    <version>0.4-incubating-SNAPSHOT</version>
+    <version>0.4-incubating</version>
   </parent>
 
   <artifactId>sirona-api</artifactId>
