[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1751453 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/store/cube/pom.xml
+++ b/agent/store/cube/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <artifactId>sirona-agent-store</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.4-incubating</version>
+    <version>0.5-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
