--- a/agent/performance/jpa/pom.xml
+++ b/agent/performance/jpa/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>sirona-performance</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.4-incubating</version>
+    <version>0.5-incubating-SNAPSHOT</version>
   </parent>
 
   <artifactId>sirona-jpa</artifactId>
