SIRONA-64 dump on exit flag for javaagent + fixing tests on java 8
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1766254 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/src/test/resources/pathtracking/sirona.properties
+++ b/agent/javaagent/src/test/resources/pathtracking/sirona.properties
@@ -15,9 +15,7 @@
 # specific language governing permissions and limitations
 # under the License.
 excludes = \
-    prefix:java,\
-    prefix:sun,\
-    prefix:com,\
+    container:jvm,\
     regex:org.apache.test.*Test\\..*,\
     prefix:org.junit,\
     prefix:junit, \
