[maven-release-plugin] prepare release sirona-0.5-incubating
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1790306 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-webapp-full/pom.xml
+++ b/server/reporting/reporting-webapp-full/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.apache.sirona</groupId>
     <artifactId>sirona-reporting</artifactId>
-    <version>0.5-incubating-SNAPSHOT</version>
+    <version>0.5-incubating</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
