--- a/agent/performance/jdbc/pom.xml
+++ b/agent/performance/jdbc/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <artifactId>sirona-performance</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.5-incubating-SNAPSHOT</version>
+    <version>0.5-incubating</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>sirona-jdbc</artifactId>
