--- a/store/memory/pom.xml
+++ b/store/memory/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.sirona</groupId>
     <artifactId>sirona-store</artifactId>
-    <version>0.5-incubating</version>
+    <version>0.6-incubating-SNAPSHOT</version>
   </parent>
 
   <artifactId>sirona-store-memory</artifactId>
